--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,14 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  clippy:
+  code:
     runs-on: ubuntu-latest
     steps: 
     - uses: actions/checkout@v3
     - name: Run clippy
       run: cargo clippy
+    - name: Check formatting
+      run: cargo fmt --check
       
   test:
     runs-on: ubuntu-latest
