--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ about = "[This is an about text]"
 [dependencies]
 clap = {version="4.1.4", features=["cargo", "derive"]}
 serde_yaml = {version="0.9.17", features=[]}
+num = {version="0.4.0"}
