--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde_yaml = {version="0.9.17", features=[]}
 num = {version="0.4.0"}
 
 [dev-dependencies]
-criterion = "0.3.4"
+criterion = {version="0.3.4", features=["html_reports"]}
 
 [[bench]]
 name = "some_benchmark"
