--- a/unit_test_c/makefile
+++ b/unit_test_c/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -lstdc++ -lm
 
-SRC = main.cc MC_RNG_State.cc DirectionCosine.cc UpdateTrajectory.cc
+SRC = main.cc MC_RNG_State.cc DirectionCosine.cc UpdateTrajectory.cc Computation.cc
 OUT = main.o
 
 .PHONY: clean
