--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,7 +38,16 @@
                     "kind": "bin"
                 }
             },
-            "args": ["-i", "input_files/QS_originals/AllEscape/allEscape.inp","-e", "energy", "-S", "section", "-n", "10000"],
+            "args": [
+                "-i",
+                "input_files/QS_originals/NoFission/noFission.inp",
+                "-e",
+                "energy",
+                "-S",
+                "section",
+                "-n",
+                "10000"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
