--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ about = "[This is an about text]"
 clap = {version="4.1.4", features=["cargo", "derive"]}
 serde_yaml = {version="0.9.17", features=[]}
 num = {version="0.4.0"}
+rand = {version="0.8.5", features=["small_rng"]}
 
 [dev-dependencies]
 criterion = {version="0.3.4", features=["html_reports"]}
 
 [[bench]]
-name = "some_benchmark"
+name = "rng_benchmark"
 harness = false
