--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rand = {version="0.8.5", features=["small_rng"]}
 
 [profile.release]
 lto = true
+codegen-units = 1
 
 [dev-dependencies]
 criterion = {version="0.3.4", features=["html_reports"]}
