--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ serde_yaml = {version="0.9.17", features=[]}
 num = {version="0.4.0"}
 rand = {version="0.8.5", features=["small_rng"]}
 
+[profile.release]
+lto = true
+codegen-units = 1
+
 [dev-dependencies]
 criterion = {version="0.3.4", features=["html_reports"]}
 
