--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,16 @@ about = "[This is an about text]"
 [dependencies]
 clap = {version="4.1.4", features=["cargo", "derive"]}
 serde_yaml = {version="0.9.17", features=[]}
+num = {version="0.4.0"}
+rand = {version="0.8.5", features=["small_rng"]}
+
+[profile.release]
+lto = true
+codegen-units = 1
+
+[dev-dependencies]
+criterion = {version="0.3.4", features=["html_reports"]}
+
+[[bench]]
+name = "rng_benchmark"
+harness = false
