added benchmark for full cross product; partial product is much faster but may be less prone to parallelization?

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ criterion = {version="0.3.4", features=["html_reports"]}
 [[bench]]
 name = "rng_benchmark"
 harness = false
+
+[[bench]]
+name = "mct_cross_product"
+harness = false
