--- a/.github/workflows/rustdoc.yml
+++ b/.github/workflows/rustdoc.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           command: doc
           args: --all --no-deps
-      - run: ./docs/build.sh
+      - run: sudo ./docs/build.sh
       - name: Deploy Docs
         uses: peaceiris/actions-gh-pages@v3
         with:
