--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rand = {version="0.8.5", features=["small_rng"]}
 [profile.release]
 lto = true
 #codegen-units = 1
+debug = true
 
 [dev-dependencies]
 criterion = {version="0.3.4", features=["html_reports"]}
