--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ clap = {version="4.1.4", features=["cargo", "derive"]}
 serde_yaml = {version="0.9.17", features=[]}
 num = {version="0.4.0"}
 rand = {version="0.8.5", features=["small_rng"]}
+tinyvec = {version="1.6.0"}
 
 [profile.release]
 lto = true
 #codegen-units = 1
-debug = true
+#debug = true
 
 [dev-dependencies]
 criterion = {version="0.3.4", features=["html_reports"]}
