--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ tinyvec = {version="1.6.0"}
 [profile.release]
 lto = true
 #codegen-units = 1
-#debug = true
+debug = true
 
 [dev-dependencies]
 criterion = {version="0.3.4", features=["html_reports"]}
