added FI f64 figures

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 
 !/profiling/Fastiron/RuSeq/*.csv
 !/profiling/SequentialAnalysis/reference_data/*/*.csv
+!/profiling/SequentialAnalysis/figures/*/*.png
