update ignore & RuSeq data/flamegraph

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@
 /out
 *.csv
 *.dat
+*.data
 *.png
-
-!/profiling/Fastiron/RuSeq/*.csv
-!/profiling/SequentialAnalysis/reference_data/*/*.csv
-!/profiling/SequentialAnalysis/figures/*/*.png
+*.svg
