--- a/fastiron/Cargo.toml
+++ b/fastiron/Cargo.toml
@@ -3,7 +3,7 @@ name = "fastiron"
 version = "1.2.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# DEPENDENCIES
 
 [dependencies]
 clap = {version="4.1.4", features=["cargo", "derive"]}
@@ -14,6 +14,12 @@ tinyvec = {version="1.6.0"}
 
 [dev-dependencies]
 criterion = {version="0.3.4", features=["html_reports"]}
+
+# FEATURES
+[features]
+single-precision = []
+
+# BENCH
 
 [[bench]]
 name = "rng_benchmark"
