--- a/fastiron/Cargo.toml
+++ b/fastiron/Cargo.toml
@@ -12,6 +12,7 @@ num = {version="0.4.0"}
 rand = {version="0.8.5", features=["small_rng"]}
 tinyvec = {version="1.6.0"}
 rayon= {version="1.7.0"}
+atomic = {version="0.5"}
 
 [dev-dependencies]
 criterion = {version="0.3.4", features=["html_reports"]}
