Parallelism using rayon (#80)
* add rayon dep

* Added f32 option to CLI

Need to find a way to make the switch work; for now, features will do

* added makeshift parallel iterator; need to fix the borrows with Arc/Mutex

* program runs with a fake parallel cfg

The program runs using rayon's parallel iterators but the mutex
are just locked at the top of every call to cycle tracking guts

* modified ExecPolicy Enum to fit objectives

* update to MCProcessorInfo struct

* CLI update for exec policy support; unit tests

* doc update & support for rayon's default n_threads

* separated tallies from MCUnits

* removed XS cache-ing in MCUnit

This significantly worsen performances in sequential mode but it allows
us to remove the Mutex on the structure since is is now read-only

* attempt at atomics for num_segments; need to change all types to make it work

* moved tallies out of the collision event routine

* replaced all balance coutners with atomic types

* Rayon parallelization works & speedup is observed!

Scalar flux computations are currently disabled when in parallel; need
to find a workaround atomic floats

Speedup between Sequential & rayon parallel can be found in percents.md

* Added QS OpenMP data for future reference

OpenMP QS is currently twice as fast as Rayon FI

* Moved mutex on extra container to minimize locktime

Need to do an exhaustive bench, but performances seems to be better than
OpenMP QS

* Added csv data for rayon-only execution using default RAYON_N_THREADS

* added summary with FoM

* added percents for version comparison & renamed data files

* moved back collision tallying to collsion event function

* added implem changes to profiling summary

* Implemented scalar flux computation

There is a small performance down grade but FI is still ~20% faster than QS

* update to implem changes in the profiling summary

* update function signature; no more useless mutability

* r

--- a/profiling/.gitignore
+++ b/profiling/.gitignore
@@ -1,4 +1,9 @@
 !/Fastiron/*/*.csv
 !/Fastiron/*/*.svg
+!/Fastiron/*/*.png
+
+!/RayonOnly/reference_data/*.csv
+!/RayonOnly/figures/*.png
+
 !/SequentialAnalysis/reference_data/*/*.csv
 !/SequentialAnalysis/figures/*/*.png
