added rustc-hash dep

--- a/fastiron/Cargo.toml
+++ b/fastiron/Cargo.toml
@@ -15,6 +15,7 @@ rayon= {version="1.7.0"}
 atomic = {version="0.5"}
 hwloc2 = {version="2.2.0"}
 libc = {version="0.2.146"}
+rustc-hash = {version="1.1.0"}
 
 [dev-dependencies]
 criterion = {version="0.3.4", features=["html_reports"]}
