--- a/fastiron-stats/Cargo.toml
+++ b/fastiron-stats/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "fastiron-stats"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = {version="4.1.4", features=["cargo", "derive"]}
 csv = "1.2.1"
+plotters = "0.3.5"
+gnuplot = "0.0.38"
