--- a/fastiron/Cargo.toml
+++ b/fastiron/Cargo.toml
@@ -6,19 +6,19 @@ edition = "2021"
 # DEPENDENCIES
 
 [dependencies]
-clap = {version="4.3.5", features=["cargo", "derive"]}
-serde_yaml = {version="0.9.21", features=[]}
-num = {version="0.4.0"}
-rand = {version="0.8.5", features=["small_rng"]}
-tinyvec = {version="1.6.0"}
-rayon= {version="1.7.0"}
-atomic = {version="0.5.3"}
-hwloc2 = {version="2.2.0"}
-libc = {version="0.2.146"}
-rustc-hash = {version="1.1.0"}
+clap = { version = "4.3.5", features = ["cargo", "derive"] }
+serde_yaml = { version = "0.9.21", features = [] }
+num = { version = "0.4.0" }
+rand = { version = "0.8.5", features = ["small_rng"] }
+tinyvec = { version = "1.6.0" }
+rayon = { version = "1.7.0" }
+atomic = { version = "0.5.3" }
+hwloc2 = { version = "2.2.0" }
+libc = { version = "0.2.146" }
+rustc-hash = { version = "1.1.0" }
 
 [dev-dependencies]
-criterion = {version="0.5.1", features=["html_reports"]}
+criterion = { version = "0.5.1", features = ["html_reports"] }
 
 # FEATURES
 [features]
@@ -32,4 +32,8 @@ harness = false
 
 [[bench]]
 name = "mct_cross_product"
+harness = false
+
+[[bench]]
+name = "snap_turtle"
 harness = false
