--- a/fastiron-stats/Cargo.toml
+++ b/fastiron-stats/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "fastiron-stats"
-version = "1.1.0"
+version = "1.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.3.5", features = ["cargo", "derive"] }
-csv = "1.2.2"
-gnuplot = "0.0.38"
+clap = { version = "*", features = ["cargo", "derive"] }
+csv = "*"
+gnuplot = "*"
