--- a/.github/workflows/rustdoc.yml
+++ b/.github/workflows/rustdoc.yml
@@ -17,17 +17,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
-          components: rustfmt, rust-src
-      - uses: actions-rs/cargo@v1
-        with:
-          command: doc
-          args: --all --no-deps
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Generate Rust Docs
+        run: cargo doc --all --no-deps
       - run: sudo ./docs/build.sh
       - name: Deploy Docs
         uses: peaceiris/actions-gh-pages@v3
