--- a/.github/workflows/simple-ci.yml
+++ b/.github/workflows/simple-ci.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
-      - run: sudo apt-get install -y libhwloc-dev
+      - run: sudo apt-get install -y libhwloc-dev libudev-dev
       - name: Run rust tests
         run: cargo test --all
 
@@ -49,6 +49,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
-      - run: sudo apt-get install -y libhwloc-dev
+      - run: sudo apt-get install -y libhwloc-dev libudev-dev
       - name: Build the crate
         run: cargo build --all
